Fixing z-index

--- a/app/less/_content_panel.less
+++ b/app/less/_content_panel.less
@@ -1,7 +1,7 @@
 #content-panel {
     .panels();
     width: 384px;
-    z-index: 6000;
+    z-index: 8000;
     right: -384px;
     transition: all 0.5s ease-in-out;
     -moz-transition: all 0.5s ease-in-out;
