--- a/public/css/app.css
+++ b/public/css/app.css
@@ -354,7 +354,7 @@ table {
   background: #000;
   background: rgba(0, 0, 0, 0.9);
   width: 384px;
-  z-index: 6000;
+  z-index: 8000;
   right: -384px;
   transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
